<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="CL_AxisDriverL1LeftFront" Id="{200b1fcd-14b8-4d99-97a7-7230d8a0e054}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK CL_AxisDriverL1LeftFront EXTENDS CL_AxisDriverAX8206
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[SUPER^();

]]></ST>
    </Implementation>
    <Method Name="Init" Id="{33cfbbe0-1d43-4519-95be-cc28fab85ad1}">
      <Declaration><![CDATA[METHOD PUBLIC Init : BOOL
VAR_INPUT  
  stDriver : POINTER TO ST_DriverAX8206_HWI;
END_VAR

]]></Declaration>
      <Implementation>
        <ST><![CDATA[Init := FALSE;
IF stDriver <> 0 THEN
  Init := SUPER^.InitDriver(stDriverCom_P := ADR(stDriver^.comState), stDriverCh_P := ADR(stDriver^.stFront));
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="InitDefect" Id="{53bcca80-abde-4b94-96ae-a94cd40d2c69}">
      <Declaration><![CDATA[METHOD PROTECTED InitDefect : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[InitDefect := SUPER^.InitDefect();
ADSLOGSTR(ADSLOG_MSGTYPE_LOG, 'CL_AxisDriverL1LeftFront init defect','');]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>