<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="CL_AxisDriverL2RightBack" Id="{824725c5-fd0a-4827-a667-bf9e93e718ff}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK CL_AxisDriverL2RightBack EXTENDS CL_AxisDriverAX8206
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[SUPER^();

]]></ST>
    </Implementation>
    <Method Name="Init" Id="{5565a7e8-7fb5-4cd1-9490-179a32a4f063}">
      <Declaration><![CDATA[METHOD PUBLIC Init : BOOL
VAR_INPUT  
  stDriver : POINTER TO ST_DriverAX8206_HWI;
END_VAR

]]></Declaration>
      <Implementation>
        <ST><![CDATA[Init := FALSE;
IF stDriver <> 0 THEN
  Init := SUPER^.InitDriver(stDriverCom_P := ADR(stDriver^.comState), stDriverCh_P := ADR(stDriver^.stBack));
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="InitDefect" Id="{cf956569-b5b8-442c-a9dd-2cd4c5f15fef}">
      <Declaration><![CDATA[METHOD PROTECTED InitDefect : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[InitDefect := SUPER^.InitDefect();
ADSLOGSTR(ADSLOG_MSGTYPE_LOG, 'CL_AxisDriverL2RightBack init defect','');]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>